2006-04-02  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-gui.c: (ephy_gui_help_with_doc_id), (ephy_gui_help):
	* lib/ephy-gui.h:

	Add ephy_guid_help_with_doc_id for use by e-e.

2006-04-02  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/mozilla-notifiers.cpp:

	Oops, this is a string pref!

2006-04-01  Christian Persch  <chpe@cvs.gnome.org>

        * embed/mozilla/EphyPromptService.cpp:

	Fix crash when cancelling the prompt before the timeout has run.

2006-03-28  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* configure.ac:

	Do not force GTK_DISABLE_DEPRECATED because we use
	gtk_object_sink which is deprecated (EphyPromptService.cpp).

	* embed/mozilla/EphyContentPolicy.cpp: (ShouldLoad).

	Mozilla backend now supports adblock.
	Fix #335919.

2006-03-23  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-node.c: (write_parent), (ephy_node_write_to_xml):

	Fix print format/arg mismatch.

2006-03-13  Christian Persch  <chpe@cvs.gnome.org>

	* data/chrome/brand.dtd.in:

	Add releaseBaseURL entity.

2006-03-12  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2006-03-12  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 2.14.0 ===

	* NEWS:
	* configure.ac:

	Updated for 2.14.0.

	* src/prefs-dialog.c: (prefs_dialog_show_help),
	(font_prefs_dialog_response_cb):

	Fix the documentation ID the Help button points to.

2006-03-12  Christian Persch  <chpe@cvs.gnome.org>

	* src/window-commands.c:

	Add Victor to documenters in About dialogue.

2006-03-10  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks-editor.c:

	Fix item ordering to fix bookmarks export format. Bug #333959,
	patch has RT approval.

2006-03-08  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyPromptService.cpp:

	Don't throw when cancelling the dialogue with ESC. Fixes bug #333780,
	patch has RT approval.

2006-03-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GlobalHistory.cpp:
